Kết nối cơ sở dữ liệu

--- a/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
+++ b/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
@@ -56,10 +56,14 @@
     <Compile Include="FormThem.Designer.cs">
       <DependentUpon>FormThem.cs</DependentUpon>
     </Compile>
+    <Compile Include="KetNoiCSDL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormThem.resx">
+      <DependentUpon>FormThem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
