--- a/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
+++ b/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
@@ -56,6 +56,12 @@
     <Compile Include="FormThem.Designer.cs">
       <DependentUpon>FormThem.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormXoa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormXoa.Designer.cs">
+      <DependentUpon>FormXoa.cs</DependentUpon>
+    </Compile>
     <Compile Include="KetNoiCSDL.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -64,6 +70,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormThem.resx">
       <DependentUpon>FormThem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormXoa.resx">
+      <DependentUpon>FormXoa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
