--- a/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
+++ b/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
@@ -50,6 +50,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSua1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSua1.designer.cs">
+      <DependentUpon>FormSua1.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormThem.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSua1.resx">
+      <DependentUpon>FormSua1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormThem.resx">
       <DependentUpon>FormThem.cs</DependentUpon>
