--- a/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
+++ b/QuanLyNhanSu/4.Source/QuanLyNhanSu/QuanLyNhanSu/QuanLyNhanSu.csproj
@@ -68,6 +68,18 @@
     <Compile Include="FormThem.Designer.cs">
       <DependentUpon>FormThem.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormThemUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormThemUser.Designer.cs">
+      <DependentUpon>FormThemUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUser.Designer.cs">
+      <DependentUpon>FormUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormXoa.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +101,12 @@
     <EmbeddedResource Include="FormThem.resx">
       <DependentUpon>FormThem.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormThemUser.resx">
+      <DependentUpon>FormThemUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormUser.resx">
+      <DependentUpon>FormUser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormXoa.resx">
       <DependentUpon>FormXoa.cs</DependentUpon>
     </EmbeddedResource>
@@ -100,6 +118,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -113,6 +132,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Actions-list-add-icon %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\edit-icon %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Delete.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Button-Refresh-icon %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
